--- a/........1
+++ b/........1
@@ -17,3 +17,13 @@
         </nxos:interface>
     </nxos:configure>
 </nf:rpc>
+#######################################################################################
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<nf:rpc-reply xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0" message-id="105">
+  <nf:rpc-error>
+    <nf:error-type>application</nf:error-type>
+    <nf:error-tag>invalid-value</nf:error-tag>
+    <nf:error-severity>error</nf:error-severity>
+    <nf:error-message>Element '{http://www.cisco.com/nxos:1.0}configure': This element is not expected. Expected is one of ( {urn:ietf:params:xml:ns:netconf:base:1.0}rpcOperation, {urn:ietf:params:xml:ns:netconf:base:1.0}get-config, {urn:ietf:params:xml:ns:netconf:base:1.0}edi</nf:error-message>
+  </nf:rpc-error>
+</nf:rpc-reply>
