--- a/........1
+++ b/........1
@@ -9,7 +9,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <nf:rpc message-id="102" xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0">
     <nxos:get>
-        <nxos:router-rip xmlns="http://www.cisco.com/nxos:1.0">
+        <nxos:router-rip>
             <nxos:instance/>
         </nxos:router-rip>
     </nxos:get>
