--- a/........1
+++ b/........1
@@ -1,16 +1,10 @@
 
-<?xml version="1.0" encoding="UTF-8"?>
-<nf:rpc message-id="100" xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0">
-    <nxos:exec-config>
-        <nxos:cmd>conf t ; ip access-list new-acl ; permit ip 192.168.1.0 0.0.0.255 any</nxos:cmd>
-    </nxos:exec-config>
-</nf:rpc>
-###############################################
-<?xml version="1.0" encoding="UTF-8"?>
-<nf:rpc message-id="102" xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0">
-    <nxos:get>
-        <nxos:router-rip>
-            <nxos:instance/>
-        </nxos:router-rip>
-    </nxos:get>
-</nf:rpc>
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<nf:rpc-reply xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0" message-id="102">
+  <nf:rpc-error>
+    <nf:error-type>application</nf:error-type>
+    <nf:error-tag>invalid-value</nf:error-tag>
+    <nf:error-severity>error</nf:error-severity>
+    <nf:error-message>Element '{http://www.cisco.com/nxos:1.0}get': This element is not expected. Expected is one of ( {urn:ietf:params:xml:ns:netconf:base:1.0}rpcOperation, {urn:ietf:params:xml:ns:netconf:base:1.0}get-config, {urn:ietf:params:xml:ns:netconf:base:1.0}edit-conf</nf:error-message>
+  </nf:rpc-error>
+</nf:rpc-reply>
