--- a/........1
+++ b/........1
@@ -1,10 +1,12 @@
 
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<nf:rpc-reply xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0" message-id="102">
-  <nf:rpc-error>
-    <nf:error-type>application</nf:error-type>
-    <nf:error-tag>invalid-value</nf:error-tag>
-    <nf:error-severity>error</nf:error-severity>
-    <nf:error-message>Element '{http://www.cisco.com/nxos:1.0}get': This element is not expected. Expected is one of ( {urn:ietf:params:xml:ns:netconf:base:1.0}rpcOperation, {urn:ietf:params:xml:ns:netconf:base:1.0}get-config, {urn:ietf:params:xml:ns:netconf:base:1.0}edit-conf</nf:error-message>
-  </nf:rpc-error>
-</nf:rpc-reply>
+
+<?xml version="1.0" encoding="UTF-8"?>
+<nf:rpc xmlns:nf="urn:ietf:params:xml:ns:netconf:base:1.0" xmlns:nxos="http://www.cisco.com/nxos:1.0" message-id="102">
+    <nf:get>
+        <nf:filter>
+            <nxos:router-rip xmlns:nxos="http://www.cisco.com/nxos:1.0">
+                <nxos:instance/>
+            </nxos:router-rip>
+        </nf:filter>
+    </nf:get>
+</nf:rpc>
